screen.css
/* Add screen styles below */
body {
    display: flex;
    flex-direction: column;
}

header {
    width: 100%;
    flex-direction: row;
    justify-content: space-evenly;
    margin: 16px;
}

nav{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-right: 32px;
}

ul {
    display: flex;
}
.container {
    flex-direction: column;
}

ul li {
    list-style-type: none;
    margin: 0;
    padding: 8px;
    display: flex;
    flex-direction: row;
}


.card-content {
    justify-content: flex-start;
    flex-direction: row;
    align-items: center;
    width: 100%;
}

.metrics, .likes, .views {
    justify-content: flex-start;
    flex-direction: row;
    align-items: center;
}

.post img {
    width: 100%;
    max-width: 300px;
}

.metrics img {
    width: 24px;
    color: darkgrey;
}

#profile {
    border-radius: 100%;
    width: 48px;
    height: 48px;
}

